tests/ui/invalid_attribute_syntax.rs
use dbstruct::dbstruct;

#[dbstruct("db"=sled)]
struct Test {
    field: Option<u8>,
}

fn main() {}
